--- a/css/responsive_for_board.css/kb-mobile.css
+++ b/css/responsive_for_board.css/kb-mobile.css
@@ -7,6 +7,12 @@
   .header .header-logo {
     display: inline-block;
   }
+
+  .kb-avatar {
+    width: 32px;
+    height: 32px;
+    font-size: 16px;
+  }
 }
 
 @media (min-width: 769px) and (max-width: 995px) {
